@@ -25,11 +25,13 @@ the software.
     <description>The parent ORCID pom that all sub-projects reside under</description>
 
     <properties>
-        <spring.version>5.3.20</spring.version>
-        <security.version>5.6.2</security.version>
+        <java.version>21</java.version>
+        <spring.version>6.2.7</spring.version>
+        <security.version>6.5.9</security.version>
         <liquibase.version>4.9.1</liquibase.version>
-        <jersey.version>2.27</jersey.version>
-        <jackson.version>2.13.1</jackson.version>
+        <jersey.version>3.1.10</jersey.version>
+        <jackson.version>2.15.4</jackson.version>
+        <activemq.version>6.2.4</activemq.version>
         <swagger.version>2.1.1</swagger.version>
         <aspectj.version>1.9.6</aspectj.version>
         <jena.version>4.4.0</jena.version>
@@ -44,7 +46,7 @@ the software.
         <junit.version>4.13.2</junit.version>
         <main.basedir>${project.basedir}</main.basedir>
         <branchVersion>1.1.5-SNAPSHOT</branchVersion>
-        <togglz.version>3.3.3</togglz.version>
+        <togglz.version>4.4.0</togglz.version>
     </properties>
 
     <modules>    
@@ -89,7 +91,7 @@ the software.
                                     <version>3.6.3</version>
                                 </requireMavenVersion>
                                 <requireJavaVersion>
-                                    <version>11</version>
+                                    <version>${java.version}</version>
                                 </requireJavaVersion>
                             </rules>
                         </configuration>
@@ -125,8 +127,11 @@ the software.
                 <artifactId>maven-compiler-plugin</artifactId>
                 <inherited>true</inherited>
                 <configuration>
-                    <source>11</source>
-                    <target>11</target>
+                    <release>${java.version}</release>
+                    <parameters>true</parameters>
+                    <compilerArgs>
+                        <arg>-parameters</arg>
+                    </compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -134,7 +139,7 @@ the software.
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <!-- argLine>-Duser.timezone=America/Los_Angeles</argLine -->
-                    <argLine>-Duser.timezone=GMT</argLine>
+                    <argLine>-Duser.timezone=GMT --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.nio=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED</argLine>
                     <runOrder>alphabetical</runOrder>
                     <!-- we need to rewrite our unit test
                     to be runOrder random and take avantage 
@@ -182,6 +187,44 @@ the software.
                 <groupId>com.mycila.maven-license-plugin</groupId>
                 <artifactId>maven-license-plugin</artifactId>
             </plugin -->
+    <plugin>
+    <groupId>org.openrewrite.maven</groupId>
+    <artifactId>rewrite-maven-plugin</artifactId>
+    <version>5.43.0</version> 
+    <configuration>
+        <activeRecipes>
+        	<recipe>org.openrewrite.java.migrate.UpgradeToJava17</recipe>
+        	<recipe>org.openrewrite.java.migrate.jakarta.JavaxMigrationToJakarta</recipe>
+        	<recipe>org.openrewrite.java.spring.framework.UpgradeSpringFramework_6_0</recipe>
+            <recipe>org.openrewrite.hibernate.MigrateToHibernate62</recipe>
+            <recipe>org.openrewrite.apache.httpclient5.UpgradeApacheHttpClient_5</recipe>
+        </activeRecipes>
+    </configuration>
+    <dependencies>
+        <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-migrate-java</artifactId>
+            <version>2.20.0</version> 
+        </dependency>
+         <dependency>
+		            <groupId>org.openrewrite.recipe</groupId>
+		            <artifactId>rewrite-spring</artifactId> 
+		            <version>5.18.0</version> 
+		            <!--artifactId>rewrite-migrate-java</artifactId>
+            		<version>2.20.0</version-->
+            	   </dependency>
+        <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-hibernate</artifactId>
+            <version>2.19.1</version> 
+        </dependency>
+        <dependency>
+            <groupId>org.openrewrite.recipe</groupId>
+            <artifactId>rewrite-apache</artifactId>
+            <version>1.4.2</version> 
+        </dependency>
+    </dependencies>
+</plugin>
         </plugins>
 
         <pluginManagement>
@@ -304,6 +347,7 @@ the software.
                     <artifactId>build-helper-maven-plugin</artifactId>
                     <version>1.10</version>
                 </plugin>
+             
             </plugins>
         </pluginManagement>
     </build>
@@ -333,17 +377,17 @@ the software.
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.17.1</version>
+            <version>2.25.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.17.1</version>
+            <version>2.25.4</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-1.2-api</artifactId>
-            <version>2.17.1</version>
+            <version>2.25.4</version>
         </dependency>                 
         <dependency>
             <groupId>commons-lang</groupId>
@@ -363,7 +407,6 @@ the software.
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -395,7 +438,7 @@ the software.
             <dependency>
                 <groupId>commons-beanutils</groupId>
                 <artifactId>commons-beanutils</artifactId>
-                <version>1.9.4</version>
+                <version>1.11.0</version>
                 <scope>compile</scope>
             </dependency>
 
@@ -508,13 +551,6 @@ the software.
                         <groupId>org.springframework</groupId>
                     </exclusion>
                 </exclusions>
-            </dependency>
-            <!-- temporary patch repo until 2.0.6 is out -->
-            <dependency>
-                <groupId>org.springframework.security.oauth</groupId>
-                <artifactId>spring-security-oauth2</artifactId>
-                <version>2.5.2.RELEASE</version>
-                <scope>compile</scope>
             </dependency>
             <dependency>
                 <groupId>org.springframework.security</groupId>
@@ -637,13 +673,19 @@ the software.
             <dependency>
                 <groupId>org.freemarker</groupId>
                 <artifactId>freemarker</artifactId>
-                <version>2.3.25-incubating</version>
+                <version>2.3.34</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>javax.servlet</groupId>
-                <artifactId>javax.servlet-api</artifactId>
-                <version>4.0.1</version>
+			    <groupId>jakarta.servlet</groupId>
+			    <artifactId>jakarta.servlet-api</artifactId>
+			    <version>6.0.0</version>
+			    <scope>compile</scope> 
+			</dependency>
+            <dependency>
+                <groupId>jakarta.annotation</groupId>
+                <artifactId>jakarta.annotation-api</artifactId>
+                <version>2.1.1</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
@@ -662,15 +704,15 @@ the software.
                 <version>${jackson.version}</version>
             </dependency>            
             <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpclient</artifactId>
-                <version>4.5.13</version>
+                <groupId>org.apache.httpcomponents.client5</groupId>
+                <artifactId>httpclient5</artifactId>
+                <version>5.3.1</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>org.apache.httpcomponents</groupId>
-                <artifactId>httpcore</artifactId>
-                <version>4.4.4</version>
+                <groupId>org.apache.httpcomponents.core5</groupId>
+                <artifactId>httpcore5</artifactId>
+                <version>5.3.6</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
@@ -687,9 +729,9 @@ the software.
             
             <!-- https://mvnrepository.com/artifact/javax.ws.rs/javax.ws.rs-api -->
 			<dependency>
-			    <groupId>javax.ws.rs</groupId>
-			    <artifactId>javax.ws.rs-api</artifactId>
-			    <version>2.1</version>
+			    <groupId>jakarta.ws.rs</groupId>
+                <artifactId>jakarta.ws.rs-api</artifactId>
+                <version>3.1.0</version>
 			</dependency>                    
 
             <!-- Database -->
@@ -698,21 +740,34 @@ the software.
                 <artifactId>postgresql</artifactId>
                 <version>42.7.2</version>
             </dependency>
+
+
+
             <dependency>
-              <groupId>org.hibernate</groupId>
-              <artifactId>hibernate-agroal</artifactId>
-              <version>5.4.27.Final</version>
+                <groupId>org.hibernate.orm</groupId>
+                <artifactId>hibernate-core</artifactId>
+                <version>6.4.4.Final</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.orm</groupId>
+                <artifactId>hibernate-agroal</artifactId>
+                <version>6.4.4.Final</version>
+            </dependency>
+            <dependency>
+                <groupId>org.hibernate.orm</groupId>
                 <artifactId>hibernate-c3p0</artifactId>
-                <version>5.3.6.Final</version>
+                <version>6.4.4.Final</version>
             </dependency>
             <dependency>
-                <groupId>org.hibernate</groupId>
+                <groupId>org.hibernate.validator</groupId>
                 <artifactId>hibernate-validator</artifactId>
-                    <version>5.4.3.Final</version>
+                <version>8.0.1.Final</version>
             </dependency>
+            <dependency>
+    			<groupId>jakarta.persistence</groupId>
+    			<artifactId>jakarta.persistence-api</artifactId>
+    			<version>3.1.0</version>
+			</dependency>
             <dependency>
                 <groupId>org.liquibase</groupId>
                 <artifactId>liquibase-core</artifactId>
@@ -736,13 +791,38 @@ the software.
             <dependency>
                 <groupId>org.ehcache</groupId>
                 <artifactId>ehcache</artifactId>
-                <version>3.5.2</version>
+                <version>3.11.1</version>
+                <classifier>jakarta</classifier>
+                <exclusions>
+                    <exclusion>
+                        <groupId>org.glassfish.jaxb</groupId>
+                        <artifactId>jaxb-runtime</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>org.glassfish.jaxb</groupId>
+                        <artifactId>jaxb-core</artifactId>
+                    </exclusion>
+                    <exclusion>
+                        <groupId>javax.xml.bind</groupId>
+                        <artifactId>jaxb-api</artifactId>
+                    </exclusion>
+                </exclusions>
             </dependency>
             <dependency>
                 <groupId>javax.cache</groupId>
                 <artifactId>cache-api</artifactId>
-                    <version>1.0.0</version>
+                    <version>1.1.1</version>
             </dependency>            
+            <dependency>
+                <groupId>org.glassfish.jaxb</groupId>
+                <artifactId>jaxb-runtime</artifactId>
+                <version>2.3.8</version>
+            </dependency>
+            <dependency>
+                <groupId>javax.xml.bind</groupId>
+                <artifactId>jaxb-api</artifactId>
+                <version>2.3.1</version>
+            </dependency>
 
             <!-- AOP -->
             <dependency>
@@ -763,7 +843,7 @@ the software.
             <dependency>
                 <groupId>commons-io</groupId>
                 <artifactId>commons-io</artifactId>
-                <version>2.7</version>
+                <version>2.14.0</version>
                 <scope>compile</scope>
             </dependency>
             <dependency>
@@ -773,9 +853,9 @@ the software.
                 <scope>compile</scope>
             </dependency>
             <dependency>
-                <groupId>javax.validation</groupId>
-                <artifactId>validation-api</artifactId>
-                <version>2.0.1.Final</version>
+                <groupId>jakarta.validation</groupId>
+                <artifactId>jakarta.validation-api</artifactId>
+                <version>3.0.2</version> 
             </dependency>
             <dependency>
                 <groupId>args4j</groupId>
@@ -797,7 +877,7 @@ the software.
             <dependency>
                 <groupId>org.jbibtex</groupId>
                 <artifactId>jbibtex</artifactId>
-                <version>1.0.7</version>
+                <version>1.0.20</version>
             </dependency>
             <dependency>
                 <groupId>net.sf.opencsv</groupId>
@@ -882,7 +962,7 @@ the software.
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.10.5</version>
+            <version>1.14.12</version>
         </dependency>
             <dependency>
                 <groupId>org.hsqldb</groupId>
@@ -923,7 +1003,7 @@ the software.
             <dependency>
                <groupId>org.orcid</groupId>
                <artifactId>orcid-model</artifactId>
-               <version>3.3.9</version>
+               <version>4.0.0</version>
             </dependency>
             <dependency>
                <groupId>org.orcid</groupId>
@@ -1005,25 +1085,6 @@ the software.
             <url>https://jcenter.bintray.com</url>
         </repository>
     </repositories>
-    <pluginRepositories>
-        <pluginRepository>
-            <id>m2.java.net</id>
-            <name>Java.net Maven 2 Repository</name>
-            <url>https://download.java.net/maven/2</url>
-            <layout>default</layout>
-        </pluginRepository>
-        <pluginRepository>
-            <id>mc-release</id>
-            <name>Local Maven repository of releases</name>
-            <url>https://mc-repo.googlecode.com/svn/maven2/releases</url>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <releases>
-                <enabled>true</enabled>
-            </releases>
-        </pluginRepository>
-    </pluginRepositories>
 
     <profiles>
         <!--  Localhost deployments -->
